# BassyStadiumTools

./: .dockerignore  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.clavix/outputs/archive/aptabase-analytics/: full-prd.md  quick-prd.md  tasks.md
.clavix/outputs/archive/fm-stadium-tools/: mini-prd.md  tasks.md
.clavix/outputs/archive/github-actions-release/: tasks.md
.clavix/outputs/archive/ui-enhancements/: full-prd.md  quick-prd.md  tasks.md
.clavix/outputs/fm-stadium-tools/: optimized-prompt.md  original-prompt.md  tasks.md
.clavix/outputs/github-actions-release/: full-prd.md  quick-prd.md  tasks.md
.clavix/outputs/r2-bepinex-migration/: full-prd.md  quick-prd.md  tasks.md
.clavix/outputs/window-styling/: full-prd.md  quick-prd.md  tasks.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
scripts/: build-windows.sh
src/: App.tsx  index.css  types.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  configs.rs  download.rs  fm26.rs  lib.rs  logs.rs  main.rs  models.rs  stadium.rs
src/components/: BepInExInstallDialog.tsx  ComingSoonOverlay.tsx  ConsentDialog.tsx  ErrorBoundary.tsx  UpdateChecker.tsx  WindowControls.tsx
src/components/ui/: alert.tsx  switch.tsx
src/hooks/: useBepInExDownload.ts  useUpdater.ts
src/lib/: analytics.ts
src/tabs/: AudioTab.tsx  ConfigsTab.tsx  GameTab.tsx  LogsTab.tsx  StadiumsTab.tsx
